--- a/changes
+++ b/changes
@@ -27292,3 +27292,19 @@ Directory m5-releases/20111220-gem5-ca98021c3f96
  README                    Locally Removed            67 
 
 Remove old version.
+
+----------
+mcadler     Date: Wed Oct  2 08:59:44 EDT 2013  CSN: CSN-m5-69
+                  Wed Oct  2 12:59:44 UTC 2013
+
+
+Directory m5-releases/20130123-gem5-stable-f75ee4849c40/src/kern/tru64
+ printf.cc                 Locally Modified           68 
+
+Directory m5-releases/20130123-gem5-stable-f75ee4849c40/src
+ SConscript                Locally Modified           68 
+
+Directory m5-releases/20130123-gem5-stable-f75ee4849c40/src/mem/ruby/network/orion
+ Wire.cc                   Locally Modified           68 
+
+Compatible with gcc 4.8.
