--- a/changes
+++ b/changes
@@ -30904,3 +30904,59 @@ Directory m5-releases/20140122-gem5-a362694dda2d/util
 
 Update to current version (without "tests" directory.)  Most recent stable is
 relatively old and I couldn't get it to compile.
+
+----------
+mcadler     Date: Wed Jan 22 19:49:09 EST 2014  CSN: CSN-m5-72
+                  Thu Jan 23 00:49:09 UTC 2014
+
+
+Directory .
+ m5/                       Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d
+ SConstruct                Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/python/m5
+ main.py                   Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src
+ SConscript                Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/cpu/simple
+ base.hh                   Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/cpu
+ exetrace.cc               Locally Modified           71 
+ thread_context.hh         Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/sim
+ syscall_emul.cc           Locally Modified           71 
+ syscall_emul.hh           Locally Modified           71 
+ process.cc                Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/arch/arm/linux
+ process.cc                Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/arch/alpha/linux
+ process.cc                Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/arch/x86/linux
+ syscalls.cc               Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/arch/mips/linux
+ process.cc                Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/arch/sparc/linux
+ syscalls.cc               Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/arch/power/linux
+ process.cc                Locally Modified           71 
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/mem
+ abstract_mem.cc           Locally Modified           71 
+
+Directory modules/hasim/functional/memory
+ m5-memory.cpp             Locally Modified           71 
+
+Standard changes to gem5 for HAsim.  I thought my user-mode additions of
+getdents syscall had been committed to the main code, but apparently not.
