--- a/changes
+++ b/changes
@@ -30999,3 +30999,19 @@ each thread that touches the event queue.  This was breaking new-style
 LIM compilations, since the new compilations may choose to multithread
 the old RRR service handlers.
 
+
+----------
+mcadler     Date: Mon Mar 17 15:28:33 EDT 2014  CSN: CSN-m5-75
+                  Mon Mar 17 19:28:33 UTC 2014
+
+
+Directory m5-releases/20140122-gem5-a362694dda2d/src/sim
+ eventq.cc                 Locally Modified           74 
+ eventq.hh                 Locally Modified           74 
+
+Directory modules/hasim/functional/isa-emulator
+ m5-isa-emulator-impl.cpp  Locally Modified           74 
+
+- Revert previous change to preserve Gem5's base event queue and thread model.
+
+- Initialize the Gem5 event queue in the ISA emulation path.
