--- a/changes
+++ b/changes
@@ -34472,3 +34472,21 @@ Directory modules/hasim/functional/isa-emulator
 
 
 Fixed what appears to be a typo on a macro.
+
+----------
+mcadler     Date: Sun Aug 10 17:58:30 EDT 2014  CSN: CSN-m5-78
+                  Sun Aug 10 21:58:30 UTC 2014
+
+
+Directory modules/hasim/functional/isa-emulator
+ m5-isa-emulator-impl.cpp  Locally Modified           77 
+
+Directory modules/hasim/functional/memory
+ m5-memory.cpp             Locally Modified           77 
+
+Directory modules/hasim/functional/hasim-base
+ m5-hasim-base.cpp         Locally Modified           77 
+ m5-hasim-base.h           Locally Modified           77 
+
+Add locks around calls to Gem5.  The locks are needed because the run-time system
+that delivers requests is now multithreaded.
